[package]
name = "runcell"
version = "0.1.0"
edition = "2024"

[dependencies]


libc = "0.2.94"
lazy_static = "1.3.0"

nix = "0.26.4"

anyhow = "1"

# Async runtime
tokio = { version = "1.46.1", features = ["full"] }

# Async Helpers
futures = "0.3.30"
async-trait = "0.1.50"
async-recursion = "0.3.2"

# Configuration
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.39"
toml = "0.5.8"
regex = "1.10.5"

tempfile = "3.19.1"

# Container
oci-spec = { version = "0.8.1", features = ["runtime"] }
caps = "0.5.0"

# Secure computing 
libseccomp = { version = "0.3.0", optional = true }

[features]
seccomp = ["libseccomp"]
